<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="bottom"
    android:padding="25dp"
    android:orientation="vertical"
    android:background="@drawable/menu"
    android:layout_height="wrap_content">
    <View
        android:layout_width="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/removeads"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_outline_shopping_cart_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/Remove_Ads"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/currency"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:gravity="center"
            android:id="@+id/iconOfCurrency"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorBlack"
            android:text="$"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/ChangeCurrency"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/rateUs"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_baseline_star_border_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/RateUS"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/share"
        android:layout_marginTop="25dp"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_outline_share_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/Share"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/favourite"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_outline_favorite_border_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/Favourites"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/saved"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="19dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_download"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/Saved"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/theme"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_outline_palette_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/Theme"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/contactUs"

        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_outline_account_box_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/Contact_Us"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/moreApps"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_outline_add_box_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/More_Apps"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:id="@+id/privacy"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/colorBlack"
            android:background="@drawable/ic_outline_lock_24"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"
            android:text="@string/Privacy"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>


</LinearLayout>